2006-10-29  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/rel_da.py: Add more locales.

2006-10-28  Don Allingham  <don@gramps-project.org>
	* help/C/gramps.xml: preferences changes
	* help/gramps.pot: updated 

2006-10-28  Alex Roitman  <shura@gramps-project.org>
	* src/Makefile.am (docmodules): Update.
	* src/Filters/Rules/Family/_MemberBase.py: Formatting fixes.
	* src/ReportBase/_ReportUtils.py: Formatting fixes.
	* src/GrampsDb/_ReadGedcom.py: Formatting fixes.
	* src/GrampsDb/_GrampsDbBase.py: Formatting fixes.
	* src/GrampsDb/_GrampsDbFactories.py: Formatting fixes.
	* src/GrampsDb/_WriteXML.py: Formatting fixes.
	* src/GrampsDb/_GrampsBSDDB.py: Formatting fixes.
	* src/RelLib/_UrlBase.py: Formatting fixes.
	* src/RelLib/_Url.py: Formatting fixes.
	* src/RelLib/_Person.py: Formatting fixes.
	* src/RelLib/_Family.py: Formatting fixes.
	* src/RelLib/_Place.py: Formatting fixes.
	* src/RelLib/_Repository.py: Formatting fixes.
	* src/BasicUtils.py: Formatting fixes.
	* src/DateHandler/_DateUtils.py: Formatting fixes.
	* NEWS: Update.
	* src/ViewManager.py (ViewManager.about): Use const.py.
	* src/const.py.in (url_manual): Add the link constant.
	* src/GrampsDisplay.py (help): Update the link.
	* src/data/tips.xml.in: Remove extra quotes.

2006-10-28  Don Allingham  <don@gramps-project.org>
	* src/plugins/FamilyGroup.py: fix typo

2006-10-28  Alex Roitman  <shura@gramps-project.org>
	* src/data/tips.xml.in: Replace -> with > 
	* help/ru/ro.po: Add po file, to start translating the manual.

2006-10-27  Don Allingham  <don@gramps-project.org>
	* src/plugins/FamilyGroup.py: don't translation paragraph name
	* src/GrampsCfg.py: remove unused online maps string
	* src/Editors/_EditRepoRef.py: fixed transation strings
	* src/Editors/_EditName.py: fixed transation strings
	* src/Editors/_EditChildRef.py: fixed transation strings
	* src/ScratchPad.py: fixed transation strings
	* help/C/gramps.xml: update
	* help/C/figures/prefs.png: update