@@ -1,3 +1,6 @@
+2006-10-29  Don Allingham  <don@gramps-project.org>
+	* help/C/gramps.xml: fix <warning>
+
 2006-10-29  Alex Roitman  <shura@gramps-project.org>
 	* src/plugins/rel_da.py: Add more locales.
 
